--- a/ustcthesis.cls
+++ b/ustcthesis.cls
@@ -687,7 +687,7 @@
 % Times New Roman + Arial
 \newcommand\ustc@set@font@times{%
   % \setmainfont{Times New Roman}%
-  \setsansfont{Arial}%
+  % \setsansfont{Arial}%
   \ifustc@system@mac
     \setmonofont{Menlo}[Scale = MatchLowercase]%
   \else
