--- a/ustcthesis.cls
+++ b/ustcthesis.cls
@@ -686,13 +686,13 @@
 
 % Times New Roman + Arial
 \newcommand\ustc@set@font@times{%
-  % \setmainfont{Times New Roman}%
-  % \setsansfont{Arial}%
-  % \ifustc@system@mac
-  %   \setmonofont{Menlo}[Scale = MatchLowercase]%
-  % \else
-  %   \setmonofont{Courier New}[Scale = MatchLowercase]%
-  % \fi
+  \setmainfont{Times New Roman}%
+  \setsansfont{Arial}%
+  \ifustc@system@mac
+    \setmonofont{Menlo}[Scale = MatchLowercase]%
+  \else
+    \setmonofont{Courier New}[Scale = MatchLowercase]%
+  \fi
 }
 
 % TeX Gyre Termes
